--- a/people.html
+++ b/people.html
@@ -1,6 +1,8 @@
 ---
 layout: post
 title: People - Project ETHOS
+category : Intro
+stickie: true
 ---
 
 # ETHOS members at the University of Iceland
@@ -17,6 +19,36 @@ website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.h
   </td>
   </tr>
 </table>
+
+<br>
+
+<table>
+  <tr>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="100px" height="100px"></td>
+    <td valign="top"> 
+Sebastian Bohr<br>
+PhD student, Faculty of Physical Sciences, University of Iceland <br> 
+email: <a href="mailto:seb21@hi.is">seb21@hi.is</a>
+website: 
+  </td>
+  </tr>
+</table>
+
+
+<br>
+
+<table>
+  <tr>
+    <td width="120px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px"></td>
+    <td valign="top"> 
+Jan Burger<br>
+PhD student, Faculty of Physical Sciences, University of Iceland <br> 
+email: <a href="mailto:jdb5@hi.is">jdb5@hi.is</a>
+website: 
+  </td>
+  </tr>
+</table>
+
 
 <br>
 
@@ -47,7 +79,7 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   
 <br>
 
-# ETHOS members
+# ETHOS members at other institutions
 <br>
 <table>
   <tr>
