--- a/about.html
+++ b/about.html
@@ -4,4 +4,20 @@ title: About ETHOS
 ---
 <!-- This page is not compatible with markdown -->
 
-Put something here.
+Our current knowledge of the Cosmos
+points to the existence of a gravitationally
+dominant form of matter, dark matter
+(DM), whose identity remains one of the
+biggest mysteries in physics. The current
+model of structure formation rests on the
+Cold Dark Matter (CDM) hypothesis
+where galaxies form and evolve in a
+dominant, but purely gravitational DM
+background. Other DM particle
+interactions, albeit possible, are assumed
+to be too feeble to play any role in this
+process. Surprisingly, strong non-
+gravitational DM interactions are allowed by current astronomical observations to a level that can alter the formation and evolution of galaxies. It is in fact possible that clues of such particle interactions are already present in the observed properties of the smallest galaxies, which have been consistently in conflict with the predictions of the CDM model.
+
+
+At a time when the nature of DM remains uncertain, the PI, in collaboration with an international team working at the intersection between astrophysics, cosmology and particle physics, has taken the first steps towards developing an effective theoretical framework (ETHOS, Fig. 1) that explains how galaxies form and evolve in the broadest sense, without assuming a unique DM prior. ETHOS contains a wide range of allowed DM particle physics, and the first results indicate that is a powerful framework to tackle the outstanding challenges of CDM at the scales of individual galaxies. The ambitious goal of this proposal is to take the development of ETHOS to a higher level by adding self-consistently the physics of DM interactions into state-of-the-art computer simulations that include the complex gas and stellar physics (henceforth “baryonic physics”) that create the luminous galaxies. This will allow us to identify signatures of new DM physics that can be searched for in current and upcoming observations in a more direct way.
