--- a/people.html
+++ b/people.html
@@ -3,7 +3,7 @@ layout: post
 title: People - Project ETHOS
 ---
 
-# ETHOS members at the University of Iceland
+# ETHOS developers at the University of Iceland
 <br>
 <table>
   <tr>
@@ -76,7 +76,7 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   
 <br>
 
-# ETHOS members at other institutions
+# ETHOS developers at other institutions
 <br>
 <table>
   <tr>
