--- a/about.html
+++ b/about.html
@@ -22,21 +22,24 @@ gravitational DM interactions are allowed by current astronomical observations t
 
 At a time when the nature of DM remains uncertain, the PI, in collaboration with an international team working at the intersection between astrophysics, cosmology and particle physics, has taken the first steps towards developing an effective theoretical framework (ETHOS, Fig. 1) that explains how galaxies form and evolve in the broadest sense, without assuming a unique DM prior. ETHOS contains a wide range of allowed DM particle physics, and the first results indicate that is a powerful framework to tackle the outstanding challenges of CDM at the scales of individual galaxies. The ambitious goal of this proposal is to take the development of ETHOS to a higher level by adding self-consistently the physics of DM interactions into state-of-the-art computer simulations that include the complex gas and stellar physics (henceforth “baryonic physics”) that create the luminous galaxies. This will allow us to identify signatures of new DM physics that can be searched for in current and upcoming observations in a more direct way.
 
->VISION.
+<h4>VISION</h4>
 
 The main goal of this interdisciplinary proposal is to test the hypothesis that gravity is the only DM interaction that matters for galaxy formation and evolution. This is a fundamental test whose implications are far reaching across a community that is using this unproven hypothesis as the core of increasingly sophisticated models to interpret increasingly detailed observations. Many of these interpretations would need to be revised if we find conclusive evidence of new DM physics. If such evidence remains elusive, our results will nevertheless provide the strongest constraints to non-CDM models of structure formation, giving needed reassurance to the CDM model. By making detailed predictions of the consequences of non-gravitational DM interactions in galaxy formation and evolution, we will point towards novel ways to search for new DM physics in astronomical observations, which is truly valuable at a time when traditional particle searches have been unsuccessful.
 
->OBJECTIVES
+<h4>OBJECTIVES</h4>
 
 The overarching goal of this proposal will be pursued through a research strategy that is divided in three major themes (work packages) with their own objectives:
 
 >WP1: Development of ETHOS (baryonic physics + new algorithm for DM self- collisions)
+
 ETHOS adopts a novel approach to structure formation by constructing a generic mapping from the parameters of a broad range of allowed DM particle models into the effective parameters relevant for structure formation (Cyr-Racine, Sigurdson, Zavala et al. 2016). To follow the formation and evolution of galaxies, we will design a new algorithm that deals with DM interactions in a deterministic self-consistent way, and implement it into a code for cosmological simulations, which includes gas and stellar physics. This algorithm will establish the connection between the DM microphysics and its simulated macrophysics (unclear in current algorithms). In addition, we will be able to explore the interplay between baryonic physics and DM interactions in shaping the properties of galaxies, an avenue of research that is virtually unexplored.
 
 >WP2: The high redshift Universe and the first galaxies
+
 The onset of structure formation is a sensitive probe to DM interactions that reduce the clustering of matter at earlier times, suppressing and/or delaying the formation of small galaxies. With ETHOS we will explore the consequences of non-gravitational DM interactions in the galaxy population before and shortly after the epoch of reionisation. Using observations of the intergalactic medium and of the abundance of galaxies at early times, we will explore the conditions under which the minimum mass scale for galaxy formation is set by the DM nature or by gas physics (or by both). We will be in a position to predict (and potentially discover) a signature of new DM physics, which would be a leap forward towards unveiling the DM nature. Looking for such signatures in the properties of galaxies and their environment is a promising endeavour at a time where particle-based searches continue producing null results.
 
 >WP3: Dwarf galaxies in the local Universe
+
 Since dwarfs are the most DM dominated galaxies, they are perhaps the best astrophysical laboratories to test the DM nature. They are also the galaxies where the CDM model faces the toughest inconsistencies. Using ETHOS, we have recently shown that some of these inconsistencies are alleviated by invoking new DM interactions (Vogelsberger, Zavala et al. 2016). It remains to be seen under which conditions this conclusion holds once the effects of baryonic physics are taken into account. Because of these reasons, we will choose dwarf galaxies as targets to make a comprehensive study of the synergy between allowed DM and baryonic physics. The expectation is that the DM- baryons synergy will lead to degeneracies in some of the dwarf properties. However, since the baryonic/dark mechanisms of DM rearrangement are different in nature, they should leave different signatures that could be distinguished in more detailed observables.
 
 
