--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About ETHOS
 ---
 <!-- This page is not compatible with markdown -->
 <table><tr>
-<td>
+<td width="50%">
 Our current knowledge of the Cosmos
 points to the existence of a gravitationally
 dominant form of matter, dark matter
