--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ gravitational DM interactions are allowed by current astronomical observations t
 
 At a time when the nature of DM remains uncertain, the PI, in collaboration with an international team working at the intersection between astrophysics, cosmology and particle physics, has taken the first steps towards developing an effective theoretical framework (ETHOS, Fig. 1) that explains how galaxies form and evolve in the broadest sense, without assuming a unique DM prior. ETHOS contains a wide range of allowed DM particle physics, and the first results indicate that is a powerful framework to tackle the outstanding challenges of CDM at the scales of individual galaxies. The ambitious goal of this proposal is to take the development of ETHOS to a higher level by adding self-consistently the physics of DM interactions into state-of-the-art computer simulations that include the complex gas and stellar physics (henceforth “baryonic physics”) that create the luminous galaxies. This will allow us to identify signatures of new DM physics that can be searched for in current and upcoming observations in a more direct way.
 
-<img src="photos/picture_500.png" width="400px">
+<center><img src="photos/picture_500.png" width="400px"></center>
 
 <h4>VISION</h4>
 
