--- a/people.html
+++ b/people.html
@@ -9,7 +9,7 @@ title: People - Project ETHOS
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Jesús Zavala Franco <br>
+<strong>Dr Jesús Zavala Franco</strong> <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  <br>
 email: <a href="mailto:jzavala@hi.is">jzavala@hi.is</a> <br>
