--- a/people.html
+++ b/people.html
@@ -9,7 +9,7 @@ title: People - Project ETHOS
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-<strong>Dr Jesús Zavala Franco</strong> <br>
+<strong>Dr Jesús Zavala Franco (PI)</strong> <br>
 Associate Professor, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2007, Universidad Nacional Autónoma de México  <br>
 email: <a href="mailto:jzavala@hi.is">jzavala@hi.is</a> <br>
@@ -24,7 +24,7 @@ website: <a href="https://notendur.hi.is/~jzavala/index.html">https://notendur.h
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Sebastian Bohr<br>
+<strong>Sebastian Bohr</strong><br>
 PhD student, Faculty of Physical Sciences, University of Iceland <br> 
 email: <a href="mailto:seb21@hi.is">seb21@hi.is</a>
 website: 
@@ -39,7 +39,7 @@ website:
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Jan Burger<br>
+<strong>Jan Burger</strong><br>
 PhD student, Faculty of Physical Sciences, University of Iceland <br> 
 email: <a href="mailto:jdb5@hi.is">jdb5@hi.is</a>
 website: 
@@ -54,7 +54,7 @@ website:
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Mark Lovell<br>
+<strong>Dr Mark Lovell</strong><br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br> 
 email: <a href="mailto:mr.lovell62@gmail.com">mr.lovell62@gmail.com</a>
   </td>
@@ -66,7 +66,7 @@ email: <a href="mailto:mr.lovell62@gmail.com">mr.lovell62@gmail.com</a>
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Chaichalit Srisawat <br>
+<strong>Dr Chaichalit Srisawat </strong><br>
 Postdoctoral Fellow, Faculty of Physical Sciences, University of Iceland <br>
 PhD, 2015, University of Sussex <br>
 email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
@@ -82,7 +82,7 @@ email: <a href="mailto:boyd.srisawat@gmail.com">boyd.srisawat@gmail.com</a>
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Prof Torsten Bringmann <br>
+<strong>Prof Torsten Bringmann </strong><br>
 Professor, Department of Physics, University of Oslo <br>
 PhD, 2005, University of Stockholm <br>
 email: <a href="mailto:torsten.bringmann@fys.uio.no">torsten.bringmann@fys.uio.no</a> <br>
@@ -95,7 +95,7 @@ website: <a href="http://www.mn.uio.no/fysikk/english/people/aca/troms/">http://
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Francis-Yan Cyr-Racine <br>
+<strong>Dr Francis-Yan Cyr-Racine </strong><br>
 Postdoctoral Fellow, Department of Physics, Harvard University <br>
 PhD, 2012, University of British Columbia <br>
 
@@ -110,7 +110,7 @@ website: <a href="http://users.physics.harvard.edu/~fcyrraci/index.html">http://
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Prof Christoph Pfrommer <br>
+<strong>Prof Christoph Pfrommer </strong><br>
 Professor, Leibniz Institute for Astrophysics Potsdam <br>
 PhD, 2005, Max Planck Institute for Astrophysics <br>
 
@@ -125,7 +125,7 @@ website: <a href="http://www.cita.utoronto.ca/~pfrommer/">http://www.cita.utoron
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Kris Sigurdson <br>
+<strong>Dr Kris Sigurdson </strong><br>
 Associate Professor, Department of Physics and Astronomy, University of British Columbia <br>
 PhD, 2005, California Institute of Technology <br>
 
@@ -139,7 +139,7 @@ website: <a href="http://www.phas.ubc.ca/~krs/">http://www.phas.ubc.ca/~krs/</a>
   <tr>
     <td width="150px" valign="top"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/NGC_4414_%28NASA-med%29.jpg/1200px-NGC_4414_%28NASA-med%29.jpg" width="120px" height="120px"></td>
     <td valign="top"> 
-Dr Mark Vogelsberger <br>
+<strong>Dr Mark Vogelsberger </strong><br>
 Assistant Professor, Department of Physics, MIT <br>
 PhD, 2010, Max Planck Institute for Astrophysics <br> 
 
